--- a/node-note/package.json
+++ b/node-note/package.json
@@ -13,7 +13,8 @@
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
