--- a/node-note/package.json
+++ b/node-note/package.json
@@ -15,15 +15,16 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind": "^4.0.0",
     "typewriter-effect": "^2.21.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.17",
     "daisyui": "^4.6.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   }
 }
