--- a/node-note/package.json
+++ b/node-note/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "convex": "^1.8.0",
     "d3": "^7.8.5",
     "firebase": "^10.7.1",
     "next": "^14.0.4",
