--- a/node-note/tsconfig.json
+++ b/node-note/tsconfig.json
@@ -21,7 +21,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "components/Navigation.jsx"  ],
   "exclude": [
     "node_modules"
   ]
