--- a/node-note/package.json
+++ b/node-note/package.json
@@ -11,12 +11,17 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.4",
     "@clerk/themes": "^1.7.9",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "convex": "^1.8.0",
     "d3": "^7.8.5",
     "firebase": "^10.7.1",
+    "lucide-react": "^0.316.0",
     "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.21.0",
     "uuid": "^9.0.1"
   },
