--- a/node-note/package.json
+++ b/node-note/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^4.29.4",
     "@clerk/themes": "^1.7.9",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.0",
     "convex": "^1.8.0",
     "d3": "^7.8.5",
