--- a/node-note/package.json
+++ b/node-note/package.json
@@ -21,6 +21,7 @@
     "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.21.0",
