--- a/node-note/package.json
+++ b/node-note/package.json
@@ -17,6 +17,7 @@
     "convex": "^1.8.0",
     "d3": "^7.8.5",
     "firebase": "^10.7.1",
+    "flowbite-react": "^0.7.2",
     "lucide-react": "^0.316.0",
     "next": "^14.0.4",
     "react": "^18",
