--- a/node-note/package.json
+++ b/node-note/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.4",
     "@clerk/themes": "^1.7.9",
+    "@radix-ui/react-popover": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
