--- a/node-note/package.json
+++ b/node-note/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.4",
     "@clerk/themes": "^1.7.9",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
