--- a/node-note/package.json
+++ b/node-note/package.json
@@ -12,12 +12,14 @@
     "@clerk/nextjs": "^4.29.4",
     "@clerk/themes": "^1.7.9",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
+    "cmdk": "^0.2.1",
     "convex": "^1.8.0",
     "d3": "^7.8.5",
     "firebase": "^10.7.1",
@@ -30,7 +32,8 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.21.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "18.2.48",
