--- a/node-note/tsconfig.json
+++ b/node-note/tsconfig.json
@@ -29,7 +29,7 @@
     "**/*.tsx",
     "components/Navigation.jsx",
     ".next/types/**/*.ts"
-  ],
+, "src/pages/(routes)documents/index.jsx"  ],
   "exclude": [
     "node_modules"
   ]
