--- a/node-note/package.json
+++ b/node-note/package.json
@@ -32,6 +32,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.21.0",
+    "usehooks-ts": "^2.14.0",
     "uuid": "^9.0.1",
     "zustand": "^4.5.0"
   },
