--- a/node-note/package.json
+++ b/node-note/package.json
@@ -13,6 +13,7 @@
     "@clerk/themes": "^1.7.9",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -22,12 +23,14 @@
     "cmdk": "^0.2.1",
     "convex": "^1.8.0",
     "d3": "^7.8.5",
+    "emoji-picker-react": "^4.7.14",
     "firebase": "^10.7.1",
     "flowbite-react": "^0.7.2",
     "lucide-react": "^0.316.0",
     "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-textarea-autosize": "^8.5.3",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
