--- a/node-note/package.json
+++ b/node-note/package.json
@@ -34,6 +34,7 @@
     "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-modal": "^3.16.1",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
