--- a/node-note/package.json
+++ b/node-note/package.json
@@ -36,6 +36,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-force-graph": "^1.44.3",
     "react-modal": "^3.16.1",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
