first demo of GraphView works

--- a/node-note/package.json
+++ b/node-note/package.json
@@ -29,14 +29,14 @@
     "convex": "^1.8.0",
     "d3": "^7.8.5",
     "emoji-picker-react": "^4.7.14",
-    "firebase": "^10.7.1",
+    "firebase": "^10.6.0",
     "flowbite-react": "^0.7.2",
     "lucide-react": "^0.316.0",
     "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
-    "react-force-graph": "^1.44.3",
+    "react-graph-vis": "^1.0.7",
     "react-modal": "^3.16.1",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
