--- a/node-note/package.json
+++ b/node-note/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
+    "clipboard": "^2.0.11",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "convex": "^1.8.0",
