--- a/node-note/package.json
+++ b/node-note/package.json
@@ -32,6 +32,7 @@
     "emoji-picker-react": "^4.7.14",
     "firebase": "^10.6.0",
     "flowbite-react": "^0.7.2",
+    "head": "^1.0.0",
     "lucide-react": "^0.316.0",
     "next": "^14.0.4",
     "react": "^18",
